recursion.cons.last.Last.scala.error
Erreur de compilation :
Last:4: error: value legth is not a member of List[Int]
  if(l.legth==1){
       ^