recursion.cons.last.Last.scala.code
def last(l:List[Int]): Int = {
  
  if(l.legth==1){
    
    return l.head
    
  }
  
  else{
    
    return last(l.tail)
      
    }
    
    

}